--- a/src/themes/simplebootx/User/login.html
+++ b/src/themes/simplebootx/User/login.html
@@ -47,22 +47,22 @@
 	<!-- 主内容区 -->
 	<div class="loginBox">
 		<div class="leftLogin">
-			<form action="">
+			<form >
 				<div class="formgroup">
 					<label for="loginName">登录名:</label>
-					<div class="formInputBox"><input type="text" placeholder="请输入手机号码或者身份证" id="loginName"></div>
+					<div class="formInputBox"><input type="text" placeholder="请输入手机号码或者身份证" id="loginName" name="user_name"></div>
 				</div>
 				<div class="formgroup">
 					<label for="userPsd">密码:</label>
-					<div class="formInputBox"><input type="password" placeholder="请输入6-16位字符密码" id="userPsd"></div>
+					<div class="formInputBox"><input type="password" placeholder="请输入6-16位字符密码" id="userPsd" name="hosuser_password"></div>
 				</div>
 				<div class="formgroup">
 					<label for="verificationCode">验证码:</label>
-					<div class="formInputBox"><input type="password" placeholder="请输入验证码" id="verificationCode"></div>
-					<img src="" alt="">
+					<div class="formInputBox"><input type="text" name="verify" placeholder="请输入验证码" id="verificationCode"  onkeyup="this.value=this.value.replace(/[^\x00-\xff]/g, '')"></div>
+					{:sp_verifycode_img('length=4&font_size=12&width=90&height=28&charset=2345678&use_noise=1&use_curve=0')}
 				</div>
 				<div class="formgroup"><a href="" class="psdBack">找回密码</a></div>
-				<div class="loginBtn"><a href="">登录</a></div>
+				<div class="loginBtn"><a href="" id="loginbtn">登录</a></div>
 			</form>
 		</div>
 		<div class="rightLogin">
@@ -77,6 +77,7 @@
 </body>
 <script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
 <script type="text/javascript" src="__PUBLIC__/js/jquery.page.js"></script>
+<script src="__PUBLIC__/js/noty/noty.js"></script>
 <script>
 	$(function(){
 		$(".agreementHead").on("click",function(){
@@ -86,7 +87,33 @@
 			}else{
 				 $(".agreementContent").css("display","none");
 			}
-		})
+		});
+		//提交
+		$("#loginbtn").on('click', function(){
+			
+			$.ajax({
+				url:"{:U('Login/dologin')}",
+				method:'post',
+				data:$('form').serialize(),
+				success:function(data){
+					if(data.status == 1){
+						noty({
+							text: data.info,
+				            type:"success",
+				            layout:"center"
+						});
+						$('body').load("{:U('Xing/index')}");
+					}else{
+						noty({
+							text: data.info,
+				            type:"error",
+				            layout:"center"
+						});
+					}
+				}
+			});
+		return false;
+		});
 	})
 </script>
 </html>
