--- a/src/admin/themes/simplebootx/Admin/Disease/edit.html
+++ b/src/admin/themes/simplebootx/Admin/Disease/edit.html
@@ -38,6 +38,18 @@
 					<div class="controls form-group">
 						<input type="text" name="disease_mobile" value="{$disease.disease_mobile}">
 					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label">详细介绍:</label>
+					<div class="controls form-group">
+						<textarea name="disease_detail" rows="4">{$disease.disease_detail}</textarea>
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label">常见症状:</label>
+					<div class="controls form-group">
+						<input type="text" name="common_symptom" value="{$disease.common_symptom}">
+					</div>
 				</div>	
 			</fieldset>
 			<div class="form-actions">
