--- a/src/admin/themes/simplebootx/Admin/Registration/add.html
+++ b/src/admin/themes/simplebootx/Admin/Registration/add.html
@@ -63,7 +63,7 @@
 	            </tr>
 	            
             </table>
-            <table border="1" style="margin-top:20px;display:none;" class="doctortime">
+            <table border="1px" style="margin-top:20px;display:none;" class="doctortime">
             	<tr align='center'>
             		<td style="width:100px;">时间</td>
             		<php>
