--- a/src/themes/simplebootx/User/doctorRegistered.html
+++ b/src/themes/simplebootx/User/doctorRegistered.html
@@ -5,6 +5,7 @@
 	<title>山西省医院挂号平台</title>
 	<link rel="stylesheet" href="__PUBLIC__/css/index.css">
 	<link rel="shortcut icon" href="__PUBLIC__/images/favicon.ico" >
+	<link rel="stylesheet" href="__PUBLIC__/css/combo.select/combo.select.css">
 </head>
 <body>
 	<!-- 头部 -->
@@ -44,125 +45,55 @@
 		</div>
 	</div>
 	<!-- 头部结束 -->
-	<div class="inputBox">
+	<!-- <div class="inputBox">
 		<input type="text" placeholder="请您输入要挂号的医生姓名"><span>搜索</span>
-	</div>
+	</div> -->
+	
+	<form class="well form-search" method="post" action="{:U('Xing/doctorRegistered')}">
+		<div class="inputBox">
+			<input type="text" name="doctor_name" placeholder="请您输入要挂号的医生姓名" value="{:I('request.doctor_name/s','')}">
+		</div>
+		<div class="inputBox">
+			<input type="text" name="doctor_number" placeholder="请您输入要挂号的医生编号" value="{:I('request.doctor_number/s','')}">
+		</div>
+		<div class="inputBox">
+			<input type="submit" class="btn btn-primary" value="搜索" />
+			<a class="btn btn-danger" href="{:U('Xing/doctorRegistered')}">清空</a>
+		</div>
+	</form>
+	
 	<div class="doctorBox">
+		<volist name="doctor" id="vo">
 		<div class="doctorInfo">
 			<div class="leftInfo">
-				<div class="doctorImg"><img src="__PUBLIC__/images/doctor_1.jpg" alt=""></div>
+				<div class="doctorImg">
+					<if condition="empty($vo['doctor_avatar'])">
+						<img src="__PUBLIC__/images/doctor_1.jpg" alt="">
+					<else/>
+                    	<img src="{:sp_get_image_url($vo['doctor_avatar'])}" alt="">
+                    </if>
+				</div>
 				<div class="doctorIntroduce">
-					<span class="doctorName">申长礼</span>
-					<span class="doctorTitle">国家特贴主任医师</span>
+					<span class="doctorName">{$vo.doctor_name}（{$vo.doctor_number}）</span>
+					<span class="doctorTitle">{$vo.position_name}</span>
 					<span>山西省医院</span>
-					<span>内科</span>
+					<span>{$vo.bdept_name}</span>
 				</div>
 			</div>
 			<div class="rightInfo">
 				<div class="infoLeft">
-					<span>11111</span>
+					<span>{$vo.appoint_totalnum}</span>
 					<p>预约总量</p>
-					<span>10000</span>
+					<span>{$vo.expire_totalnum}</span>
 					<p>就诊总量</p>
 				</div>
 				<div class="infoRgiht">
-					<div><span>参考费用:</span><span>40.50</span>元</div>
-					<div class="subscribeStatus">已约满</div>
+					<div><span>参考费用:</span><span>{$vo.position_price}</span>元</div>
+					<a class="subscribeStatus">预约</a>
 				</div>
 			</div>
 		</div>
-		<div class="doctorInfo">
-			<div class="leftInfo">
-				<div class="doctorImg"><img src="__PUBLIC__/images/doctor_1.jpg" alt=""></div>
-				<div class="doctorIntroduce">
-					<span class="doctorName">申长礼</span>
-					<span class="doctorTitle">国家特贴主任医师</span>
-					<span>山西省医院</span>
-					<span>内科</span>
-				</div>
-			</div>
-			<div class="rightInfo">
-				<div class="infoLeft">
-					<span>11111</span>
-					<p>预约总量</p>
-					<span>10000</span>
-					<p>就诊总量</p>
-				</div>
-				<div class="infoRgiht">
-					<div><span>参考费用:</span><span>40.50</span>元</div>
-					<div class="subscribeStatus">已约满</div>
-				</div>
-			</div>
-		</div>
-		<div class="doctorInfo">
-			<div class="leftInfo">
-				<div class="doctorImg"><img src="__PUBLIC__/images/doctor_1.jpg" alt=""></div>
-				<div class="doctorIntroduce">
-					<span class="doctorName">申长礼</span>
-					<span class="doctorTitle">国家特贴主任医师</span>
-					<span>山西省医院</span>
-					<span>内科</span>
-				</div>
-			</div>
-			<div class="rightInfo">
-				<div class="infoLeft">
-					<span>11111</span>
-					<p>预约总量</p>
-					<span>10000</span>
-					<p>就诊总量</p>
-				</div>
-				<div class="infoRgiht">
-					<div><span>参考费用:</span><span>40.50</span>元</div>
-					<div class="subscribeStatus">已约满</div>
-				</div>
-			</div>
-		</div>
-		<div class="doctorInfo">
-			<div class="leftInfo">
-				<div class="doctorImg"><img src="__PUBLIC__/images/doctor_1.jpg" alt=""></div>
-				<div class="doctorIntroduce">
-					<span class="doctorName">申长礼</span>
-					<span class="doctorTitle">国家特贴主任医师</span>
-					<span>山西省医院</span>
-					<span>内科</span>
-				</div>
-			</div>
-			<div class="rightInfo">
-				<div class="infoLeft">
-					<span>11111</span>
-					<p>预约总量</p>
-					<span>10000</span>
-					<p>就诊总量</p>
-				</div>
-				<div class="infoRgiht">
-					<div><span>参考费用:</span><span>40.50</span>元</div>
-					<div class="subscribeStatus">已约满</div>
-				</div>
-			</div>
-		</div>
-		<div class="doctorInfo">
-			<div class="leftInfo">
-				<div class="doctorImg"><img src="images/doctor_1.jpg" alt=""></div>
-				<div class="doctorIntroduce">
-					<span class="doctorName">申长礼</span>
-					<span class="doctorTitle">国家特贴主任医师</span>
-					<span>山西省医院</span>
-					<span>内科</span>
-				</div>
-			</div>
-			<div class="rightInfo">
-				<div class="infoLeft">
-					<span>11111</span>
-					<p>预约总量</p>
-					<span>10000</span>
-					<p>就诊总量</p>
-				</div>
-				<div class="infoRgiht">
-					<div><span class="referencePrice">参考费用:</span><span>40.50</span>元</div>
-					<div class="subscribeStatus">已约满</div>
-				</div>
-			</div>
-		</div>
+		</volist>
 	</div>
 	<div class="paging_disease_gh">
 		<div id="address-paging" class="tcdPageCode"></div>
@@ -172,15 +103,16 @@
 		<div class="templatemo_footer">Copyright © 2048 <a href="#">山西省医院</a> | Template from wuxin</div>
 	</div>
 </body>
-<script src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.page.js"></script>
+<!-- <script src="__PUBLIC__/js/common.js"></script> -->
+<script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/js/jquery.page.js"></script>
 <script>
 	$(function(){
 		$("#address-paging").createPage({
-	        pageCount:7,
-	        current:1,
+	        pageCount:{$total_page},
+	        current:{$current_page},
 	        backFn:function(page){
-	        	// $('.main-content').load("{:U("Xing/addressCenter")}",{page:page});
+	        	$('body').load("{:U('Xing/doctorRegistered')}",{page:page});
 	        }
 	    });
 	});
