--- a/src/themes/simplebootx/User/personalCenter.html
+++ b/src/themes/simplebootx/User/personalCenter.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>山西省医院挂号平台</title>
-	<link rel="stylesheet" href="__PUBLIC__/css/index.css">
 	<link rel="shortcut icon" href="__PUBLIC__/images/favicon.ico" >
+	<link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
+	<link rel="stylesheet" href="__PUBLIC__/css/index.css">
 </head>
 <body>
 	<!-- 头部 -->
@@ -31,7 +32,7 @@
 			</form>
 		</div>
 	</div>
-	<div class="nav">
+	<div class="nav_index">
 		<div class="nav_box">
 			<ul class="nav_ul">
 				<li><a href="{:U('Xing/index')}">首页</a></li>
@@ -45,15 +46,159 @@
 	</div>
 	<!-- 头部结束 -->
 	<!-- 主内容区 -->
-
+	<section class="content personalBox">
+		<!-- 内容导航 -->
+		<ul class="nav nav-tabs doctorTimeNav">
+			<li><a data-target="#home" data-toggle="tab">个人信息</a></li>
+			<li><a data-target="#Safety" data-toggle="tab">安全中心</a></li>
+			<li><a data-target="#patientInfo" data-toggle="tab">病人信息</a></li>
+		</ul>
+		<div class="tab-content">
+			<!-- 个人信息 -->
+			<div class="individual tab-pane" id="home">
+				<form action="">
+					<div class="formgroup usename">
+						<span class="name">真实姓名:</span>
+						<div class="formInputBox"><input type="text" id="usename" name="hosuser_name" autocomplete="off"></div>
+						<div class="hintBox">
+							<span class="errhint">用户名不能为空</span>
+						</div>
+					</div>
+					<div class="formgroup idNumber">
+						<span class="name">身份证号:</span>
+						<div class="formInputBox"><input type="text" id="idNumber" name="idcard"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效证件号码注册</span>
+							<span class="errhint">身份证不合法</span>
+						</div>
+					</div>
+					<div class="formgroup phoneNumber">
+						<span class="name">手机号码:</span>
+						<div class="formInputBox"><input type="text" id="phoneNumber" name="mobile"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效的手机号码</span>
+						</div>
+					</div>
+					<div class="formgroup email">
+						<span class="name">电子邮箱:</span>
+						<div class="formInputBox"><input type="text" id="email" name="email"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效的Email</span>
+						</div>
+					</div>
+					<div class="formgroup">
+						<span class="name">联系地址:</span>
+						<div class="formInputBox"><input type="text" id="contactAddress" name="address"></div>
+						<div class="hintBox">
+							<span>
+								<div class="annotation">此为您常用的联系地址</div>
+							</span>
+							<span class="errhint"></span>
+						</div>
+					</div>
+					<button>确认编辑</button>
+				</form>
+			</div>
+			<!-- 安全中心 -->
+			<div class="safety tab-pane" id="Safety">
+				<form action="">
+					<div class="formgroup">
+						<span class="name">原始密码:</span>
+						<div class="formInputBox"><input type="password" id="userPassword" name="hosuser_password" maxlength="16" autocomplete="off"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入6-16位字符，超过16位的按前16位计算</span>
+							<span class="errhint">密码不能为空</span>
+						</div>
+					</div>
+					<div class="formgroup">
+						<span class="name">新密码:</span>
+						<div class="formInputBox"><input type="password" id="userPassword" name="hosuser_password" maxlength="16" autocomplete="off"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入6-16位字符，超过16位的按前16位计算</span>
+							<span class="errhint">密码不能为空</span>
+						</div>
+					</div>
+					<div class="formgroup verifyPsd">
+						<span class="name">密码确认:</span>
+						<div class="formInputBox"><input type="password" id="verifyPsd" maxlength="16" autocomplete="off"></div>
+						<div class="hintBox">
+							<span>
+								<div class="annotation"><font class="red">*</font>请重复输入上面的密码</div>
+							</span>
+							<span class="errhint">两次输入的密码不一致</span>
+						</div>
+					</div>
+					<button>保存</button>
+				</form>
+			</div>
+			<!-- 病人信息 -->
+			<div class="patientInfo tab-pane" id="patientInfo">
+				<!-- 查询头部 -->
+				<!-- <div class="row">
+					<span>添加</span>
+				</div> -->
+				<!-- 基本信息表格 -->
+				<div class="row patientTable">
+					<div class="col-xs-12">
+						<div class="box">
+							<div class="box-body table-responsive no-padding">
+								<table class="table table-hover">
+									<tbody>
+										<tr>
+											<th><input type="checkbox" class="mini" id="selectAll"></th>
+											<th>医生编号</th>
+											<th>姓名</th>
+											<th>科室</th>
+											<th>工作时间</th>
+											<th>操作</th>
+										</tr>
+										<tr class="datalist">
+											<td><input type="checkbox" class="mini"></td>
+											<td>1225</td>
+											<td>武鑫</td>
+											<td>神经内科</td>
+											<td>周三上午</td>
+											<td><a href="">编辑</a><a href="">删除</a></td>
+										</tr>
+										<tr class="datalist">
+											<td><input type="checkbox" class="mini"></td>
+											<td>0011</td>
+											<td>徐晗</td>
+											<td>神经科</td>
+											<td>周三上午</td>
+											<td><a href="">编辑</a><a href="">删除</a></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- 底部 -->
 	<div class="index_footer">
 		<div class="templatemo_footer">Copyright © 2048 <a href="#">山西省医院</a> | Template from wuxin</div>
 	</div>
 </body>
-<script src="js/jquery-1.9.1.min.js"></script>
-<script type="text/javascript" src="js/jquery.page.js"></script>
+<script src="__PUBLIC__/js/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" src="__PUBLIC__/js/jquery.page.js"></script>
+<script src="__PUBLIC__/js/bootstrap.min.js"></script>
 <script>
-	
+	tableContentHeight($(".personalBox"));
+	$(function(){
+		$(".nav-tabs>li>a:first").tab("show");
+		// $(window).resize(function(){ 
+		// 	tableContentHeight($(".tableContent"));
+		// });
+	});
+	function tableContentHeight(data) { //底部footer调整
+		if(data.height() > $(window).height()){
+
+		} else {
+			$(".personalBox").css("height",$(window).height()-266);
+		}
+	}
 </script>
 </html>
