--- a/src/themes/simplebootx/User/register.html
+++ b/src/themes/simplebootx/User/register.html
@@ -31,7 +31,7 @@
 			</form>
 		</div>
 	</div>
-	<div class="nav">
+	<div class="nav_index">
 		<div class="nav_box">
 			<ul class="nav_ul">
 				<li><a href="{:U('Xing/index')}">首页</a></li>
