--- a/src/themes/simplebootx/User/doctorRegistered.html
+++ b/src/themes/simplebootx/User/doctorRegistered.html
@@ -40,7 +40,7 @@
 				<li class="nav_color"><a href="{:U('Xing/doctorRegistered')}">按医生挂号</a></li>
 				<li><a href="{:U('Xing/visitTheTable')}">医生出诊表</a></li>
 				<li><a href="#">最新公告</a></li>
-				<li class="personalCenter"><a href="{:U('Xing/personalCenter')}">个人中心</a></li>
+				<li class="personalCenter"><a href="{:U('Login/index')}">个人中心</a></li>
 			</ul>
 		</div>
 	</div>
