--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -5,6 +5,7 @@
 	<title>山西省医院挂号平台</title>
 	<link rel="shortcut icon" href="__PUBLIC__/images/favicon.ico" >
 	<link rel="stylesheet" href="__PUBLIC__/css/bootstrap.min.css">
+	<link rel="stylesheet" href="__PUBLIC__/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="__PUBLIC__/css/index.css">
 </head>
 <body>
@@ -85,7 +86,12 @@
 											<td>123@qq.com</td>
 											<td>湖南长沙</td>
 											<td>
-												
+												<button class="btn btn-primary btn-xs" id="editTrBtn">
+													<span class="fa fa-fw fa-edit" aria-hidden="true"></span>编辑
+												</button>
+												<button class="btn btn-default btn-xs" id="deleteTrBtn">
+													<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>删除
+												</button>
 											</td>
 										</tr>
 										<tr class="datalist">
@@ -94,7 +100,14 @@
 											<td>12312341234</td>
 											<td>123@qq.com</td>
 											<td>湖南长沙</td>
-											<td><a href="">编辑</a><a href="">删除</a></td>
+											<td>
+												<button class="btn btn-primary btn-xs">
+													<span class="fa fa-fw fa-edit" aria-hidden="true"></span>编辑
+												</button>
+												<button class="btn btn-default btn-xs">
+													<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>删除
+												</button>
+											</td>
 										</tr>
 									</tbody>
 								</table>
@@ -106,7 +119,62 @@
 		</div>
 	</section>
 	<!-- 模态框 -->
-	<div class="popupDiv" style="display:none">
+	<!-- 添加病人信息 -->
+	<div class="addPopupDiv popupDiv" style="display:none">
+			<form action="">
+					<div class="formgroup usename">
+						<span class="name">真实姓名:</span>
+						<div class="formInputBox"><input type="text" id="usename" name="hosuser_name" autocomplete="off"></div>
+						<div class="hintBox">
+							<span class="errhint">用户名不能为空</span>
+						</div>
+					</div>
+					<div class="formgroup">
+						<span class="name">性别:</span>
+						<div class="formInputBox gendersBox">
+							<input id="man" type="radio" checked="checked" name="gender" />男<input id="woman" type="radio"  name="gender"/>女
+						</div>
+						<div class="hintBox">
+							<span class="errhint">用户名不能为空</span>
+						</div>
+					</div>
+					<div class="formgroup idNumber">
+						<span class="name">身份证号:</span>
+						<div class="formInputBox"><input type="text" id="idNumber" name="idcard"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效证件号码注册</span>
+							<span class="errhint">身份证不合法</span>
+						</div>
+					</div>
+					<div class="formgroup phoneNumber">
+						<span class="name">手机号码:</span>
+						<div class="formInputBox"><input type="text" id="phoneNumber" name="mobile"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效的手机号码</span>
+						</div>
+					</div>
+					<div class="formgroup email">
+						<span class="name">电子邮箱:</span>
+						<div class="formInputBox"><input type="text" id="email" name="email"></div>
+						<div class="hintBox">
+							<span class="errhint">请输入有效的Email</span>
+						</div>
+					</div>
+					<!-- <div class="formgroup">
+						<span class="name">联系地址:</span>
+						<div class="formInputBox"><input type="text" id="contactAddress" name="address"></div>
+						<div class="hintBox">
+							<span>
+								<div class="annotation">此为您常用的联系地址</div>
+							</span>
+							<span class="errhint"></span>
+						</div>
+					</div> -->
+					<!-- <button>确认编辑</button> -->
+				</form>
+	</div>
+	<!-- 编辑病人信息 -->
+	<div class="editPopupDiv popupDiv" style="display:none">
 			<form action="">
 					<div class="formgroup usename">
 						<span class="name">真实姓名:</span>
@@ -182,12 +250,12 @@
 		})
 		//添加病人信息
 		$("#addBtn").on("click",function(){
-			$(".popupDiv").css("display","inline-block");
+			$(".addPopupDiv").css("display","inline-block");
 			layer.open({
 			  type: 1, 	//类型为页面
 			  title:"添加病人信息", //设置标题
 			  area: ['680px', '450px'], //设置宽高
-			  content: $(".popupDiv"), //弹出层内容
+			  content: $(".addPopupDiv"), //弹出层内容
 			  move: false,
 			  btn: ['确认', '取消'],
 			  yes: function(index, layero){ //点击确认后触发
@@ -196,7 +264,28 @@
 			    console.log("yes");
 			  },
 			  end: function(){
-			  	$(".popupDiv").css("display","none");
+			  	$(".addPopupDiv").css("display","none");
+			  }
+			});
+		});
+		//编辑病人信息
+		$("#editTrBtn").on("click",function(){
+			console.log(11111);
+			$(".editPopupDiv").css("display","inline-block");
+			layer.open({
+			  type: 1, 	//类型为页面
+			  title:"编辑病人信息", //设置标题
+			  area: ['680px', '450px'], //设置宽高
+			  content: $(".editPopupDiv"), //弹出层内容
+			  move: false,
+			  btn: ['确认', '取消'],
+			  yes: function(index, layero){ //点击确认后触发
+			    //do something
+			    layer.close(index); //如果设定了yes回调，需进行手工关闭
+			    console.log("yes");
+			  },
+			  end: function(){
+			  	$(".editPopupDiv").css("display","none");
 			  }
 			});
 		})
