--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -83,17 +83,18 @@
 											<th>姓名</th>
 											<th>手机号码</th>
 											<th>电子邮箱</th>
-											<th>联系地址</th>
+											<th>身份证号</th>
 											<th>操作</th>
 										</tr>
+										<volist name="patients" id="vo">
 										<tr class="datalist">
 											<td><input type="checkbox" class="mini"></td>
-											<td>超超</td>
-											<td>12312341234</td>
-											<td>123@qq.com</td>
-											<td>湖南长沙</td>
+											<td>{$vo.patient_name}</td>
+											<td>{$vo.patient_mobile}</td>
+											<td>{$vo.patient_email}</td>
+											<td>{$vo.patient_idcard}</td>
 											<td>
-												<button class="btn btn-primary btn-xs" id="editTrBtn">
+												<button class="btn btn-primary btn-xs" id="editTrBtn" patientid="{$vo.patient_id}">
 													<span class="fa fa-fw fa-edit" aria-hidden="true"></span>编辑
 												</button>
 												<button class="btn btn-default btn-xs" id="deleteTrBtn">
@@ -101,21 +102,7 @@
 												</button>
 											</td>
 										</tr>
-										<tr class="datalist">
-											<td><input type="checkbox" class="mini"></td>
-											<td>超超</td>
-											<td>12312341234</td>
-											<td>123@qq.com</td>
-											<td>湖南长沙</td>
-											<td>
-												<button class="btn btn-primary btn-xs">
-													<span class="fa fa-fw fa-edit" aria-hidden="true"></span>编辑
-												</button>
-												<button class="btn btn-default btn-xs">
-													<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>删除
-												</button>
-											</td>
-										</tr>
+									</volist>
 									</tbody>
 								</table>
 							</div>
@@ -128,10 +115,10 @@
 	<!-- 模态框 -->
 	<!-- 添加病人信息 -->
 	<div class="addPopupDiv popupDiv" style="display:none">
-			<form action="">
+			<form action="" id="addpatient">
 					<div class="formgroup usename">
 						<span class="name">真实姓名:</span>
-						<div class="formInputBox"><input type="text" id="usename" name="hosuser_name" autocomplete="off"></div>
+						<div class="formInputBox"><input type="text" id="usename" name="patient_name" autocomplete="off"></div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
 						</div>
@@ -139,7 +126,7 @@
 					<div class="formgroup">
 						<span class="name">性别:</span>
 						<div class="formInputBox gendersBox">
-							<input id="man" type="radio" checked="checked" name="gender" />男<input id="woman" type="radio"  name="gender"/>女
+							<input id="man" type="radio" checked="checked" name="patient_sex" />男<input id="woman" type="radio"  name="patient_sex"/>女
 						</div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
@@ -147,7 +134,7 @@
 					</div>
 					<div class="formgroup idNumber">
 						<span class="name">身份证号:</span>
-						<div class="formInputBox"><input type="text" id="idNumber" name="idcard"></div>
+						<div class="formInputBox"><input type="text" id="idNumber" name="patient_idcard"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效证件号码注册</span>
 							<span class="errhint">身份证不合法</span>
@@ -155,37 +142,26 @@
 					</div>
 					<div class="formgroup phoneNumber">
 						<span class="name">手机号码:</span>
-						<div class="formInputBox"><input type="text" id="phoneNumber" name="mobile"></div>
+						<div class="formInputBox"><input type="text" id="phoneNumber" name="patient_mobile"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效的手机号码</span>
 						</div>
 					</div>
 					<div class="formgroup email">
 						<span class="name">电子邮箱:</span>
-						<div class="formInputBox"><input type="text" id="email" name="email"></div>
+						<div class="formInputBox"><input type="text" id="email" name="patient_email"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效的Email</span>
 						</div>
 					</div>
-					<!-- <div class="formgroup">
-						<span class="name">联系地址:</span>
-						<div class="formInputBox"><input type="text" id="contactAddress" name="address"></div>
-						<div class="hintBox">
-							<span>
-								<div class="annotation">此为您常用的联系地址</div>
-							</span>
-							<span class="errhint"></span>
-						</div>
-					</div> -->
-					<!-- <button>确认编辑</button> -->
 				</form>
 	</div>
 	<!-- 编辑病人信息 -->
 	<div class="editPopupDiv popupDiv" style="display:none">
-			<form action="">
+			<form action="" id="editpatient">
 					<div class="formgroup usename">
 						<span class="name">真实姓名:</span>
-						<div class="formInputBox"><input type="text" id="usename" name="hosuser_name" autocomplete="off"></div>
+						<div class="formInputBox"><input type="text" id="usename" name="patient_name" autocomplete="off"></div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
 						</div>
@@ -193,7 +169,7 @@
 					<div class="formgroup">
 						<span class="name">性别:</span>
 						<div class="formInputBox gendersBox">
-							<input id="man" type="radio" checked="checked" name="gender" />男<input id="woman" type="radio"  name="gender"/>女
+							<input id="man" type="radio" checked="checked" name="patient_sex" />男<input id="woman" type="radio"  name="patient_sex"/>女
 						</div>
 						<div class="hintBox">
 							<span class="errhint">用户名不能为空</span>
@@ -201,7 +177,7 @@
 					</div>
 					<div class="formgroup idNumber">
 						<span class="name">身份证号:</span>
-						<div class="formInputBox"><input type="text" id="idNumber" name="idcard"></div>
+						<div class="formInputBox"><input type="text" id="idNumber" name="patient_idcard"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效证件号码注册</span>
 							<span class="errhint">身份证不合法</span>
@@ -209,29 +185,19 @@
 					</div>
 					<div class="formgroup phoneNumber">
 						<span class="name">手机号码:</span>
-						<div class="formInputBox"><input type="text" id="phoneNumber" name="mobile"></div>
+						<div class="formInputBox"><input type="text" id="phoneNumber" name="patient_mobile"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效的手机号码</span>
 						</div>
 					</div>
 					<div class="formgroup email">
 						<span class="name">电子邮箱:</span>
-						<div class="formInputBox"><input type="text" id="email" name="email"></div>
+						<div class="formInputBox"><input type="text" id="email" name="patient_email"></div>
 						<div class="hintBox">
 							<span class="errhint">请输入有效的Email</span>
 						</div>
 					</div>
-					<!-- <div class="formgroup">
-						<span class="name">联系地址:</span>
-						<div class="formInputBox"><input type="text" id="contactAddress" name="address"></div>
-						<div class="hintBox">
-							<span>
-								<div class="annotation">此为您常用的联系地址</div>
-							</span>
-							<span class="errhint"></span>
-						</div>
-					</div> -->
-					<!-- <button>确认编辑</button> -->
+					<input type="hidden" id="patient_id" name="patient_id">
 				</form>
 	</div>
 	<!-- 底部 -->
@@ -243,8 +209,9 @@
 <script type="text/javascript" src="__PUBLIC__/js/jquery.page.js"></script>
 <script src="__PUBLIC__/js/bootstrap.min.js"></script>
 <script src="__PUBLIC__/layer/layer.js"></script>
+<script src="__PUBLIC__/js/noty/noty.js"></script>
 <script>
-	tableContentHeight($(".personalBox"));
+	// tableContentHeight($(".personalBox"));
 	$(function(){
 		$(".nav-tabs>li>a.patientInfo").tab("show");
 		//表格全选功能
@@ -267,6 +234,27 @@
 			  btn: ['确认', '取消'],
 			  yes: function(index, layero){ //点击确认后触发
 			    //do something
+			    $.ajax({
+			    	url:"{:U('Patients/add_post')}",
+					method:"post",
+					data:$('#addpatient').serialize(),
+					success:function(data){
+						if(data.status == 1){
+							noty({
+								text: data.info,
+					            type:"success",
+					            layout:"center"
+							});
+						$('body').load("{:U('Xing/patientInfo')}");
+						}else{
+							noty({
+								text: data.info,
+					            type:"error",
+					            layout:"center"
+							});
+						}
+					}
+			    });
 			    layer.close(index); //如果设定了yes回调，需进行手工关闭
 			    console.log("yes");
 			  },
@@ -277,24 +265,62 @@
 		});
 		//编辑病人信息
 		$("#editTrBtn").on("click",function(){
-			console.log(11111);
+			var patientid = $(this).attr("patientid");
+			console.log(patientid);
 			$(".editPopupDiv").css("display","inline-block");
-			layer.open({
-			  type: 1, 	//类型为页面
-			  title:"编辑病人信息", //设置标题
-			  area: ['680px', '450px'], //设置宽高
-			  content: $(".editPopupDiv"), //弹出层内容
-			  move: false,
-			  btn: ['确认', '取消'],
-			  yes: function(index, layero){ //点击确认后触发
-			    //do something
-			    layer.close(index); //如果设定了yes回调，需进行手工关闭
-			    console.log("yes");
-			  },
-			  end: function(){
-			  	$(".editPopupDiv").css("display","none");
-			  }
-			});
+			$.ajax({
+		    	url:"{:U('Patients/edit')}",
+				method:"post",
+				data:{patient_id:patientid},
+				success:function(data){
+					var obj = eval('('+data+')');
+					console.log(obj.patient_id);
+					$("#editpatient input[name='patient_name']").val(obj.patient_name);
+					$("#editpatient input[name='patient_mobile']").val(obj.patient_mobile);
+					$("#editpatient input[name='patient_sex']").val(obj.patient_sex);
+					$("#editpatient input[name='patient_email']").val(obj.patient_email);
+					$("#editpatient input[name='patient_id']").val(obj.patient_id);
+					$("#editpatient input[name='patient_idcard']").val(obj.patient_idcard);
+					layer.open({
+					  type: 1, 	//类型为页面
+					  title:"编辑病人信息", //设置标题
+					  area: ['680px', '450px'], //设置宽高
+					  content: $(".editPopupDiv"), //弹出层内容
+					  move: false,
+					  btn: ['确认', '取消'],
+					  yes: function(index, layero){ //点击确认后触发
+					    //do something
+					    $.ajax({
+					    	url:"{:U('Patients/edit_post')}",
+							method:"post",
+							data:$('#editpatient').serialize(),
+							success:function(data){
+								if(data.status == 1){
+									noty({
+										text: data.info,
+							            type:"success",
+							            layout:"center"
+									});
+								$('body').load("{:U('Xing/patientInfo')}");
+								}else{
+									noty({
+										text: data.info,
+							            type:"error",
+							            layout:"center"
+									});
+								}
+							}
+					    });
+					    layer.close(index); //如果设定了yes回调，需进行手工关闭
+					    console.log("yes");
+					  },
+					  end: function(){
+					  	$(".editPopupDiv").css("display","none");
+					  }
+					});
+				}
+		    });
+			
 		})
 	});
 	function tableContentHeight(data) { //底部footer调整
