病人信息删除提示

--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -234,6 +234,10 @@
 					<!-- <button>确认编辑</button> -->
 				</form>
 	</div>
+	<!-- 删除病人信息 -->
+	<!-- <div class="deletePopupDiv popupDiv" style="display:none">
+		
+	</div> -->
 	<!-- 底部 -->
 	<div class="index_footer">
 		<div class="templatemo_footer">Copyright © 2048 <a href="#">山西省医院</a> | Template from wuxin</div>
@@ -277,7 +281,6 @@
 		});
 		//编辑病人信息
 		$("#editTrBtn").on("click",function(){
-			console.log(11111);
 			$(".editPopupDiv").css("display","inline-block");
 			layer.open({
 			  type: 1, 	//类型为页面
@@ -295,6 +298,16 @@
 			  	$(".editPopupDiv").css("display","none");
 			  }
 			});
+		});
+		// 删除病人信息
+		$("#deleteTrBtn").on("click",function(){
+			layer.open({
+				title: '提示',
+				icon:5,
+				content: '确定要删除此条信息吗？',
+				btn: ['确认', '取消'],
+				move:false
+			})
 		})
 	});
 	function tableContentHeight(data) { //底部footer调整
