--- a/src/themes/simplebootx/User/patientInfo.html
+++ b/src/themes/simplebootx/User/patientInfo.html
@@ -97,7 +97,7 @@
 												<button class="btn btn-primary btn-xs editpatientBtn" id="editTrBtn" patientid="{$vo.patient_id}">
 													<span class="fa fa-fw fa-edit" aria-hidden="true"></span>编辑
 												</button>
-												<button class="btn btn-default btn-xs" id="deleteTrBtn">
+												<button class="btn btn-default btn-xs delpatientBtn" id="deleteTrBtn" patientid="{$vo.patient_id}">
 													<span class="fa fa-fw fa-trash-o" aria-hidden="true"></span>删除
 												</button>
 											</td>
